header section nav & banner done

--- a/index.html
+++ b/index.html
@@ -8,5 +8,43 @@
 </head>
 <body>
     
+<!-- ---- header section start now----- -->
+ <header class="header-container">
+    <!-- navbar section start now -->
+     <nav class="nav-container">
+        <h3 class="logo-name">Ma<span class="logo-color">r</span>y</h3>
+        <ul class="nav-iteams">
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">About</a></li>
+            <li><button class="btn-primary" >Hire Me</button></li>
+        </ul>
+     </nav>
+<!-- --- banner section start -->
+     <section>
+        <div class="banner">
+            <div class="banner-content">
+                <h4 class="banner-sub-title">Hi, I  am</h4>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-secondary">Contact</button>
+            </div>
+            <img class="banner-profile" src="images/hardy.png" alt="">
+        </div>
+     </section>
+
+
+ </header>
+ <!-- main section start now -->
+
+    <main>
+
+    </main>
+
+<!-- footer section start now -->
+ <footer>
+
+ </footer>
 </body>
 </html>
