--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
  <!-- main section start now -->
 
     <main>
+
+<!-- ------- About section start here ----- -->
         <section class="about-section">
             <div class="about-info">
                 <h3 class="common-title about-title">About Me</h3>
@@ -63,6 +65,44 @@
                 </div>
             </div>
 
+        </section>
+<!-- -- ------- About section done ----- -- -->
+ <!-- -----------What I do section start here-------- -->
+        <section class="What-I-do">
+            <div class="">
+                <h3 class="common-title">What I do</h3>
+                <p class="common-description-one what-do-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.Want to find out more about my experience? Check out my online resume and project portfolio</p>
+                <div class="cards">
+                    <div class="card-1">
+                        <div class="card-image">
+                            <img src="/images/icons/js.png" alt="">
+                        </div>
+                        <h4 class="card-title">Vanilla JavaScript</h4>
+                        <p class="card-descraption">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.Want to find out more about my experience? Check out my online resume and project portfolio</p>
+                    </div>
+                    <div class="card-2">
+                        <div class="card-image">
+                            <img src="/images/icons/react.png" alt="">
+                        </div>
+                        <h4 class="card-title">Vanilla JavaScript</h4>
+                        <p class="card-descraption">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.Want to find out more about my experience? Check out my online resume and project portfolio</p>
+                    </div>
+                    <div class="card-3">
+                        <div class="card-image">
+                            <img src="/images/icons/nodejs.png" alt="">
+                        </div>
+                        <h4 class="card-title">Vanilla JavaScript</h4>
+                        <p class="card-descraption">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.Want to find out more about my experience? Check out my online resume and project portfolio</p>
+                    </div>
+                    <div class="card-4">
+                        <div class="card-image">
+                            <img src="/images/icons/mongo.png" alt="">
+                        </div>
+                        <h4 class="card-title">Vanilla JavaScript</h4>
+                        <p class="card-descraption">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.Want to find out more about my experience? Check out my online resume and project portfolio</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
