--- a/index.html
+++ b/index.html
@@ -104,6 +104,24 @@
                 </div>
             </div>
         </section>
+<!-- -----A summary of My Resume section start here --------->
+        <section class="Resume-section">
+            <h3 class="common-title resume-title">A summary of My Resume</h3>
+            <div class="qualification-title">
+                <h4>My Education</h4>
+                <div class="Education-info">
+                    <h4 class="Education-degree">Master in Computer Engineering</h4>
+                    <p class="passing-year">Harvard University / 2015 - 2017</p>
+                    <p class="education-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+            <div class="">
+                <div class="">
+
+                </div>
+            </div>
+        </section>
     </main>
 
 <!-- footer section start now -->
